# user-auth-and-dynamic-fields

./: Readme.md  manage.py  pyproject.toml
apps/account_auth/: managers.py  models.py
user_config/: asgi.py  settings.py  urls.py  wsgi.py
user_config/settings/: base.py  development.py
