[tool.poetry]
name = "user-auth-demo"
version = "0.1.0"
description = ""
authors = ["Reiner Bielert <bielertwreiner@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
djangorestframework = "^3.15.1"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
